--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-WEBS_URL=http://localhost:3000/invite_user
-PAGE_URL=http://localhost:3000
+WEBS_URL=https://gastify-cloud-one.vercel.app/invite_user
+PAGE_URL=https://gastify-cloud-one.vercel.app
 SECRET_KEY=access_key_to_app
