feature: mejora de invitacion de usuarios y mejora de asignacion de roles y permisos

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sweetalert2": "^11.12.4"
+
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
