--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
@@ -21,10 +22,10 @@
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.4"
-
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
