--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - database
     ports:
       - 3001:3001
+    env_file: 
+      - ./backend/.env  # Cargar el archivo .env para el servidor
 
     command:
       [
@@ -28,6 +30,7 @@ services:
         "npm",
         "start"
       ]
+
   frontend:
     build: ./frontend
     volumes:
@@ -40,3 +43,5 @@ services:
       - server
     ports:
       - 3000:3000
+    env_file: 
+      - ./frontend/.env  # Cargar el archivo .env para el frontend
