remover volumes de frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
 
   frontend:
     build: ./frontend
-    volumes:
-      - ./frontend:/appfront
+    # volumes:
+    #   - ./frontend:/appfront 
     depends_on:
       - database
       - server
