--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-WEBS_URL=http://localhost:3000/invite_user
-PAGE_URL=http://localhost:3000
+WEBS_URL=http://54.160.156.69:3000/invite_user
+PAGE_URL=http://54.160.156.69:3000
 SECRET_KEY=access_key_to_app
 
-CORS_ORIGIN_URL=http://localhost:3000
+CORS_ORIGIN_URL=http://54.160.156.69:3000
 # CORS_ORIGIN_URL=https://gastify-cloud-one.vercel.app
