--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
-WEBS_URL=https://gastify-cloud-two.vercel.app/invite_user
-PAGE_URL=https://gastify-cloud-two.vercel.app
+WEBS_URL=http://localhost:3000/invite_user
+PAGE_URL=http://localhost:3000
 SECRET_KEY=access_key_to_app
+CORS_ORIGIN_URL=http://localhost:3000
+URL_DATABASE=postgresql://protolylab:ewdsfe&fe54ew21f@gastifycloud-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com/postgres
 
-CORS_ORIGIN_URL=https://gastify-cloud-two.vercel.app
 # CORS_ORIGIN_URL=https://gastify-cloud-one.vercel.app
