conexcion servidor base de datos aws

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ WEBS_URL=http://localhost:3000/invite_user
 PAGE_URL=http://localhost:3000
 SECRET_KEY=access_key_to_app
 CORS_ORIGIN_URL=http://localhost:3000
-URL_DATABASE=postgresql://protolylab:ewdsfe&fe54ew21f@gastifycloud-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com/postgres
+URL_DATABASE=postgres://postgres:ewdsfe&fe54ew21f@database-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com:5432/postgres
 
 # CORS_ORIGIN_URL=https://gastify-cloud-one.vercel.app
