variables de entorno

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,4 @@
-WEBS_URL=http://localhost:3000/invite_user
-PAGE_URL=http://localhost:3000
+WEBS_URL=https://gastify-cloud-rho.vercel.app/invite_user
+PAGE_URL=https://gastify-cloud-rho.vercel.app
 SECRET_KEY=access_key_to_app
-CORS_ORIGIN_URL=http://localhost:3000
 URL_DATABASE=postgres://postgres:ewdsfe&fe54ew21f@database-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com:5432/postgres
-
-# CORS_ORIGIN_URL=https://gastify-cloud-one.vercel.app
