--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_URL=http://3.80.146.70:3001
-NEXT_PUBLIC_CLIENT_URL=https://gastify-cloud-rho.vercel.app
+NEXT_PUBLIC_CLIENT_URL=https://gastify-cloud-flax.vercel.app
 # NEXT_PUBLIC_API_URL=https://gastify-cloud.onrender.com
 
