--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-WEBS_URL=https://gastify-cloud-flax.vercel.app/invite_user
-PAGE_URL=https://gastify-cloud-flax.vercel.app
+WEBS_URL=http://localhost:3000/invite_user
+PAGE_URL=http://localhost:3000
 SECRET_KEY=access_key_to_app
 URL_DATABASE=postgres://postgres:ewdsfe&fe54ew21f@database-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com:5432/postgres
