--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://3.80.146.70:3001
-NEXT_PUBLIC_CLIENT_URL=https://gastify-cloud-flax.vercel.app
+NEXT_PUBLIC_API_URL=https://3.85.233.249:3001
+NEXT_PUBLIC_CLIENT_URL=http://localhost:3000
 # NEXT_PUBLIC_API_URL=https://gastify-cloud.onrender.com
 
