--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 WEBS_URL=https://gastify-cloud-flax.vercel.app/invite_user
 PAGE_URL=https://gastify-cloud-flax.vercel.app
 SECRET_KEY=access_key_to_app
-URL_DATABASE=postgres://postgres:ewdsfe&fe54ew21f@database-1.cpe6o0weclq6.us-east-1.rds.amazonaws.com:5432/postgres
+URL_DATABASE=postgresql://gastifyclouddb_user:KCF42mOYt414Azs2sSpMqVnAzWAGbKC1@dpg-cs624etumphs73b4a7lg-a.oregon-postgres.render.com/gastifyclouddb
