--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-WEBS_URL=https://gastify-cloud-flax.vercel.app/invite_user
-PAGE_URL=https://gastify-cloud-flax.vercel.app
+WEBS_URL=http://localhost:3000/invite_user
+PAGE_URL=http://localhost:3000
 SECRET_KEY=access_key_to_app
 URL_DATABASE=postgresql://gastifyclouddb_user:KCF42mOYt414Azs2sSpMqVnAzWAGbKC1@dpg-cs624etumphs73b4a7lg-a.oregon-postgres.render.com/gastifyclouddb
